--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
     "require": {
         "php": ">=7.4",
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "bower-asset/jquery": ">=3.5",    // Ensure jQuery is loaded
+        "bower-asset/fonticonpicker": ">=3.1"  // Ensure FontIconPicker is loaded
     },
     "autoload": {
         "psr-4": {
