--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "require": {
         "php": ">=7.4",
         "yiisoft/yii2": "*",
-        "bower-asset/jquery": ">=3.5",    // Ensure jQuery is loaded
-        "bower-asset/fonticonpicker": ">=3.1"  // Ensure FontIconPicker is loaded
+        "bower-asset/jquery": ">=3.5",   
+        "bower-asset/fonticonpicker": ">=3.1" 
     },
     "autoload": {
         "psr-4": {
